--- a/nav.html
+++ b/nav.html
@@ -11,7 +11,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">DIS Bookstore 2017</a>
+                <a class="navbar-brand" href="#">DØK Social </a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
