--- a/login.html
+++ b/login.html
@@ -15,23 +15,61 @@
 
     <div class="row" id="nav-container"></div>
 
-    <div class="row">
-        <div class="col-lg-6">
-            <div class="page-header">
-                <h1>Login</h1>
-                <div id="load-test"></div>
+    <div class="col-md-12">
+
+        <div class="row">
+
+            <div class="col-md-6">
+                <div class="page-header">
+                    <h1>Login</h1>
+                    <div id="load-test"></div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="inputEmail">Email address</label>
+                    <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="inputPassword">Password</label>
+                    <input type="password" class="form-control" id="inputPassword" placeholder="Password">
+                </div>
+                <button style="margin-bottom: 40px" class="btn btn-default" id="login-button">Submit</button>
             </div>
-            <div class="form-group">
-                <label class="control-label" for="inputEmail">Email address</label>
-                <input type="email" class="form-control" id="inputEmail" placeholder="Email">
+
+            <div class="col-md-6">
+                <div class="page-header">
+                    <h1>Opret bruger</h1>
+                    <div id="load-test2"></div>
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="inputFirstName">Fist name</label>
+                    <input type="" class="form-control" id="inputFirstName" placeholder="First name">
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="inputLastName">Last name</label>
+                    <input type="text" class="form-control" id="inputLastName" placeholder="Last name">
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="inputEmail2">Email address</label>
+                    <input type="email" class="form-control" id="inputEmail2" placeholder="Email">
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="inputPassword2">Password</label>
+                    <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+                </div>
+                <div class="form-group">
+                    <label class="control-label" for="inputPassword3">Verify Password</label>
+                    <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                </div>
+                <button style="margin-bottom: 40px" class="btn btn-default" id="create-button">Submit</button>
             </div>
-            <div class="form-group">
-                <label class="control-label" for="inputPassword">Password</label>
-                <input type="password" class="form-control" id="inputPassword" placeholder="Password">
-            </div>
-            <button style="margin-bottom: 40px" class="btn btn-default" id="login-button">Submit</button>
+
+
         </div>
+
     </div>
+
+
+
 
 
 </div>
