--- a/nav.html
+++ b/nav.html
@@ -16,13 +16,15 @@
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+
+
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Hjem</a></li>
                     <li><a href="shop.html">Shop </a></li>
                     <li><a href="checkout.html">Checkout</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="checkout.html">Checkout</a></li>
+                    <li><a href="checkout.html">TEST</a></li>
                     <li class="authentication-link"></li>
                 </ul>
             </div><!-- /.navbar-collapse -->
