--- a/checkout.html
+++ b/checkout.html
@@ -64,9 +64,9 @@
 
 </div>
 
-<footer class="footer">
+<footer class="panel-footer">
     <div class="container">
-        <p class="text-muted">2016 © All rights reserved - Awesome Bookstore Inc.</p>
+        <p class="text-muted">2017 © All rights reserved - Weje Inc.</p>
     </div>
 </footer>
 
