--- a/my-page.html
+++ b/my-page.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 
-<div class="container">
+<div class="container-fluid">
 
     <div class="row" id="nav-container"></div>
 
@@ -43,9 +43,9 @@
 
 </div>
 
-<footer class="footer">
+<footer class="panel-footer">
     <div class="container">
-        <p class="text-muted">2016 © All rights reserved - Awesome Bookstore Inc.</p>
+        <p class="text-muted">2017 © All rights reserved - Weje Inc.</p>
     </div>
 </footer>
 
