--- a/nav.html
+++ b/nav.html
@@ -1,17 +1,22 @@
 <div class="col-lg-12">
 
-    <nav class="navbar navbar-default">
-        <div class="container-fluid">
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container">
             <!-- Brand and toggle get grouped for better mobile display -->
             <div class="navbar-header">
-                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse"
-                        data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+                <button type="button"
+                        class="navbar-toggle collapsed"
+                        data-toggle="collapse"
+                        data-target="#bs-example-navbar-collapse-1"
+                        aria-expanded="false">
+
                     <span class="sr-only">Toggle navigation</span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">DØK Social </a>
+
+                <b class="navbar-brand" href="#">DØK Social </b>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -20,12 +25,11 @@
 
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Hjem</a></li>
-                    <li><a href="shop.html">Shop </a></li>
+                    <li><a href="shop.html">Events </a></li>
                     <li><a href="checkout.html">Checkout</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="checkout.html">TEST</a></li>
-                    <li class="authentication-link"></li>
+
                 </ul>
             </div><!-- /.navbar-collapse -->
         </div><!-- /.container-fluid -->
