--- a/shop.html
+++ b/shop.html
@@ -47,12 +47,38 @@
 </div>
 
 
-<div class="container">
+<div class="container-fluid">
 
     <div class="row" id="nav-container"></div>
 
     <div class="page-header">
         <h1>Shop</h1>
+    </div>
+
+    <div class="jumbotron">
+        <h1 class="text-center">Heading text</h1>
+        <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
+    </div>
+
+    <div class="article-list">
+        <div class="container">
+            <div class="row articles">
+                <div class="col-md-4 col-sm-6 item">
+                    <a href="#"><img src="desk.jpg" class="img-responsive" /></a>
+                    <h3 class="name">Article Title</h3>
+                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p><a href="#" class="action"><i class="glyphicon glyphicon-circle-arrow-right"></i></a></div>
+                <div
+                        class="col-md-4 col-sm-6 item">
+                    <a href="#"><img src="building.jpg" class="img-responsive" /></a>
+                    <h3 class="name">Article Title</h3>
+                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p><a href="#" class="action"><i class="glyphicon glyphicon-circle-arrow-right"></i></a></div>
+                <div
+                        class="col-md-4 col-sm-6 item">
+                    <a href="#"><img src="loft.jpg" class="img-responsive" /></a>
+                    <h3 class="name">Article Title</h3>
+                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p><a href="#" class="action"><i class="glyphicon glyphicon-circle-arrow-right"></i></a></div>
+            </div>
+        </div>
     </div>
 
     <div class="row" id="book-list">
@@ -62,9 +88,9 @@
 
 </div>
 
-<footer class="footer">
+<footer class="panel-footer">
     <div class="container">
-        <p class="text-muted">2016 © All rights reserved - Awesome Bookstore Inc.</p>
+        <p class="text-muted">2017 © All rights reserved - Weje Inc.</p>
     </div>
 </footer>
 
