events early draft

--- a/shop.html
+++ b/shop.html
@@ -51,35 +51,52 @@
 
     <div class="row" id="nav-container"></div>
 
-    <div class="page-header">
-        <h1>Shop</h1>
-    </div>
-
     <div class="jumbotron">
-        <h1 class="text-center">Heading text</h1>
+        <h2 class="text-center">Events</h2>
         <p>Nullam id dolor id nibh ultricies vehicula ut id elit. Cras justo odio, dapibus ac facilisis in, egestas eget quam.</p>
     </div>
 
     <div class="article-list">
-        <div class="container">
+        <div class="container-fluid">
             <div class="row articles">
+
                 <div class="col-md-4 col-sm-6 item">
-                    <a href="#"><img src="desk.jpg" class="img-responsive" /></a>
-                    <h3 class="name">Article Title</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p><a href="#" class="action"><i class="glyphicon glyphicon-circle-arrow-right"></i></a></div>
-                <div
-                        class="col-md-4 col-sm-6 item">
-                    <a href="#"><img src="building.jpg" class="img-responsive" /></a>
-                    <h3 class="name">Article Title</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p><a href="#" class="action"><i class="glyphicon glyphicon-circle-arrow-right"></i></a></div>
-                <div
-                        class="col-md-4 col-sm-6 item">
-                    <a href="#"><img src="loft.jpg" class="img-responsive" /></a>
-                    <h3 class="name">Article Title</h3>
-                    <p class="description">Aenean tortor est, vulputate quis leo in, vehicula rhoncus lacus. Praesent aliquam in tellus eu gravida. Aliquam varius finibus est, interdum justo suscipit id.</p><a href="#" class="action"><i class="glyphicon glyphicon-circle-arrow-right"></i></a></div>
+                    <div class="jumbotron">
+                        <a href="#"><img src="img/desk.jpg" class="img-responsive" /></a>
+                        <h3 class="name">Article Title</h3>
+                        <p class="description">Aenean tortor est, vulputate quis leo in,
+                            vehicula rhoncus lacus..</p>
+                        <a href="#" class="action"><i class="glyphicon glyphicon-circle-arrow-right"></i></a>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 item">
+                    <div class="jumbotron jumbotron-fluid">
+                        <a href="#"><img src="img/building.jpg" class="img-responsive" /></a>
+                        <h3 class="name">Article Title</h3>
+                        <p class="description">Aenean tortor est, vulputate quis leo in,
+                            vehicula rhoncus lacus.</p>
+                        <a href="#" class="action"><i class="glyphicon glyphicon-circle-arrow-right"></i></a>
+                    </div>
+                </div>
+
+                <div class="col-md-4 col-sm-6 item">
+                    <div class="jumbotron jumbotron-fluid">
+                        <a href="#"><img src="img/loft.jpg" class="img-responsive" /></a>
+                        <h3 class="name">Article Title</h3>
+                        <p class="description">Aenean tortor est, vulputate quis leo in,
+                            vehicula rhoncus lacus.</p>
+                        <a href="#" class="action"><i class="glyphicon glyphicon-circle-arrow-right"></i></a>
+                    </div>
+                </div>
+
+
+
             </div>
         </div>
     </div>
+
+    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
 
     <div class="row" id="book-list">
 
