getEvents virker nu

--- a/index.html
+++ b/index.html
@@ -17,13 +17,21 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="jumbotron jumbotron-fluid">
-                <div class="container">
-                    <h1 class="display-4">Welcome to DØK Social</h1>
-                    <p class="lead">Participate in, or orchestrate events.</p>
+
+                <div class="highlight-clean">
+                    <div class="container-fluid">
+                        <div class="intro">
+                            <h2 class="text-center">Highlight</h2>
+                            <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                        </div>
+                        <div class="buttons" align="center">
+                            <button class="btn btn-default" type="button">Secondary</button>
+                        </div>
+                    </div>
+
                 </div>
-            </div>
-        </div>
+
+
     </div>
 
     <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
@@ -33,6 +41,8 @@
 
 
 
+
+</div>
 
 </div>
 
