--- a/my-page.html
+++ b/my-page.html
@@ -17,27 +17,12 @@
 
     <div class="row">
         <div class="col-lg-12">
-            <div class="page-header"></div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-2 img-container"></div>
-        <div class="col-lg-10 profile-info"></div>
-        <div class="col-lg-12">
-
-            <h3>Orders</h3>
-            <table class="table">
-                <thead>
-                <tr>
-                    <th>ID</th>
-                    <th>Items</th>
-                    <th>Total</th>
-                </tr>
-                </thead>
-                <tbody id="basket-tbody">
-
-                </tbody>
-            </table>
+            <div class="jumbotron jumbotron-fluid">
+                <div class="page-header"></div>
+            </div>
+            <div class="jumbotron jumbotron-fluid">
+                <div class="profile-info"></div>
+            </div>
         </div>
     </div>
 
