--- a/nav.html
+++ b/nav.html
@@ -25,7 +25,7 @@
 
                 <ul class="nav navbar-nav">
                     <li><a href="index.html">Hjem</a></li>
-                    <li><a href="shop.html">Events </a></li>
+                    <li><a href="events.html">Events </a></li>
                     <li><a href="checkout.html">Checkout</a></li>
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
