events on profile page works, join and see who joined events works

--- a/events.html
+++ b/events.html
@@ -53,20 +53,17 @@
     <div class="row" id="nav-container"></div>
 
     <div class="row">
-        <div class="jumbotron jumbotron-fluid">
-            <h2>Events</h2>
-        </div>
+        <h1 class="text-center">Events</h1>
     </div>
 
 
     <div class="row">
         <div class="col-md-12">
             <div id="event-list"></div>
-
         </div>
     </div>
 
-
+    <!-- Testing layout -->
     <div class="row">
         <div class="col-md-12" align="center">
             <div class="col-md-4">
@@ -90,7 +87,7 @@
         </div>
     </div>
 
-
+</div>
 
 
 
