--- a/login.html
+++ b/login.html
@@ -42,28 +42,28 @@
             <div class="col-md-6">
                 <div class="jumbotron jumbotron-fluid">
                   <div class="page-header">
-                        <h1>Opret bruger</h1>
+                        <h1>Create user</h1>
                         <div id="load-test2"></div>
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="inputFirstName">Fist name</label>
-                        <input type="" class="form-control" id="inputFirstName" placeholder="First name">
+                        <input type="" class="form-control" id="inputFirstName" placeholder="Anders">
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="inputLastName">Last name</label>
-                        <input type="text" class="form-control" id="inputLastName" placeholder="Last name">
+                        <input type="text" class="form-control" id="inputLastName" placeholder="Andersen">
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="inputEmail2">Email address</label>
-                        <input type="email" class="form-control" id="inputEmail2" placeholder="Email">
+                        <input type="email" class="form-control" id="inputEmail2" placeholder="anders@anders.com">
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="inputPassword2">Password</label>
-                        <input type="password" class="form-control" id="inputPassword2" placeholder="Password">
+                        <input type="password" class="form-control" id="inputPassword2" placeholder="password123">
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="inputPassword3">Verify Password</label>
-                        <input type="password" class="form-control" id="inputPassword3" placeholder="Password">
+                        <input type="password" class="form-control" id="inputPassword3" placeholder="password123">
                     </div>
                     <button style="margin-bottom: 40px" class="btn btn-default" id="create-button">Submit</button>
                 </div>
