--- a/index.html
+++ b/index.html
@@ -21,28 +21,63 @@
                 <div class="highlight-clean">
                     <div class="container-fluid">
                         <div class="intro">
-                            <h2 class="text-center">Highlight</h2>
-                            <p class="text-center">Nunc luctus in metus eget fringilla. Aliquam sed justo ligula. Vestibulum nibh erat, pellentesque ut laoreet vitae. </p>
+                            <h2 class="text-center">Welcome to DØK Social!</h2>
+                            <p class="text-center">Participate in, or orchestrate events.</p>
                         </div>
                         <div class="buttons" align="center">
-                            <button class="btn btn-default" type="button">Secondary</button>
+                            <!-- Trigger the modal with a button -->
+                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#createEventModal">Create new event</button>
                         </div>
                     </div>
 
                 </div>
 
 
+        </div>
+
+        <!-- Modal popup for create event-->
+        <div id="createEventModal" class="modal fade" role="dialog">
+            <div class="modal-dialog">
+
+                <!-- Modal content-->
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title"><b>Create new event</b></h4>
+                    </div>
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label class="control-label" for="inputEventName">Event name</label>
+                            <input type="text" class="form-control" id="inputEventName" placeholder="A name for your event">
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="inputLocation">Location</label>
+                            <input type="text" class="form-control" id="inputLocation" placeholder="The location your event takes place">
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="inputPrice">Price</label>
+                            <input type="number" class="form-control" id="inputPrice" placeholder="The entry fee for people participating">
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="inputEventDate">Date</label>
+                            <input type="text" class="form-control" id="inputEventDate" placeholder="dd/mm/yyyy">
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label" for="inputDescription">Description</label>
+                            <input type="" class="form-control" id="inputDescription" placeholder="Remember to specify what time the event starts">
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-info" id="eventCreateButton">Create</button>
+                        <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                    </div>
+                </div>
+
+            </div>
+        </div>
+
+
     </div>
-
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-    <br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>
-
-
-
-
-</div>
 
 </div>
 
@@ -55,6 +90,7 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
+<script src="js/createEvent.js"></script>
 <script>
     SDK.User.loadNav();
 </script>
