update and delete event works

--- a/events.html
+++ b/events.html
@@ -87,6 +87,30 @@
         </div>
     </div>
 
+
+
+    <!-- Modal popup for create event-->
+    <div id="attendingStudentsModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title"><b>Students attending this event:</b></h4>
+                </div>
+                <div class="modal-body" id="seeAttendingStudents">
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-danger" id="clearModalText" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+
 </div>
 
 
