--- a/my-page.html
+++ b/my-page.html
@@ -67,6 +67,47 @@
         </div>
     </div>
 
+    <!-- Modal for edit event -->
+    <div id="editEventModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title"><b>Editing event</b></h4>
+                </div>
+                <div class="modal-body">
+                    <div class="form-group">
+                        <label class="control-label" for="inputEventName">Event name</label>
+                        <input type="text" class="form-control" id="inputEventName" placeholder="A name for your event">
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label" for="inputLocation">Location</label>
+                        <input type="text" class="form-control" id="inputLocation" placeholder="The location your event takes place">
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label" for="inputPrice">Price</label>
+                        <input type="number" class="form-control" id="inputPrice" placeholder="The entry fee for people participating">
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label" for="inputEventDate">Date</label>
+                        <input type="text" class="form-control" id="inputEventDate" placeholder="dd/mm/yyyy">
+                    </div>
+                    <div class="form-group">
+                        <label class="control-label" for="inputDescription">Description</label>
+                        <input type="" class="form-control" id="inputDescription" placeholder="Remember to specify what time the event starts">
+                    </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-info" id="eventEditSubmitButton">Edit!</button>
+                    <button type="button" class="btn btn-danger" data-dismiss="modal">Close</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
 </div>
 
 <footer class="panel-footer">
