fixed minor errors and typos

--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
                         </div>
                         <div class="form-group">
                             <label class="control-label" for="inputDescription">Description</label>
-                            <input type="" class="form-control" id="inputDescription" placeholder="Remember to specify what time the event starts">
+                            <input type="text" class="form-control" id="inputDescription" placeholder="Remember to specify what time the event starts">
                         </div>
                     </div>
                     <div class="modal-footer">
