--- a/profile.html
+++ b/profile.html
@@ -96,7 +96,7 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="inputDescription">Description</label>
-                        <input type="" class="form-control" id="inputDescription" placeholder="Remember to specify what time the event starts">
+                        <input type="text" class="form-control" id="inputDescription" placeholder="Remember to specify what time the event starts">
                     </div>
                 </div>
                 <div class="modal-footer">
@@ -119,7 +119,7 @@
 <script src="lib/js/jquery-3.2.1.js"></script>
 <script src="lib/js/bootstrap.js"></script>
 <script src="js/sdk.js"></script>
-<script src="js/my-page.js"></script>
+<script src="js/profile.js"></script>
 
 </body>
 </html>
