--- a/login.html
+++ b/login.html
@@ -47,7 +47,7 @@
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="inputFirstName">Fist name</label>
-                        <input type="" class="form-control" id="inputFirstName" placeholder="Anders">
+                        <input type="text" class="form-control" id="inputFirstName" placeholder="Anders">
                     </div>
                     <div class="form-group">
                         <label class="control-label" for="inputLastName">Last name</label>
