--- a/nav.html
+++ b/nav.html
@@ -16,23 +16,20 @@
                     <span class="icon-bar"></span>
                 </button>
 
-                <b class="navbar-brand" href="#">DØK Social </b>
+                <b class="navbar-brand" href="#">DOEK Social </b>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-
-
                 <ul class="nav navbar-nav">
-                    <li><a href="index.html">Hjem</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="events.html">Events </a></li>
-                    <li><a href="checkout.html">Checkout</a></li>
                 </ul>
-                <ul class="nav navbar-nav navbar-right">
-
-                </ul>
+                <ul class="nav navbar-nav navbar-right"></ul>
             </div><!-- /.navbar-collapse -->
+
         </div><!-- /.container-fluid -->
+
     </nav>
 
 </div>
