--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                         </div>
                         <div class="buttons" align="center">
                             <!-- Trigger the modal with a button -->
-                            <button type="button" class="btn btn-default" data-toggle="modal" data-target="#createEventModal">Create new event</button>
+                            <button type="button" class="btn btn-default" id="createEventModalButton" data-toggle="modal" data-target="#createEventModal">Create new event</button>
                         </div>
                     </div>
 
